fixed two bugs 'full-width space, extra space of textarea text' & change braces position

--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,3 +1,6 @@
+ul,li {
+	list-style: none;
+}
 .bold {
 	font-weight: bold;
 }
